# ssd

./:  nginx.conf    standalone.html  .env  .gitignore  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  build-optimized.sh  build.sh  package.json  svelte.config.js  vite.config.ts
.cross/: Dockerfile.apple-darwin  Dockerfile.linux-musl  Dockerfile.windows-gnu
crates/sshx/: Cargo.toml
crates/sshx-core/: Cargo.toml
crates/sshx-core/proto/: sshx.proto
crates/sshx-server/: Cargo.toml
crates/sshx-server/src/: grpc.rs  main.rs  session.rs  state.rs  web.rs
crates/sshx-server/src/session/: snapshot.rs
crates/sshx-server/src/web/: admin.rs  socket.rs
crates/sshx-server/tests/: simple.rs
crates/sshx/src/: controller.rs  main.rs
src/: app.html
src/lib/: Session.svelte
src/lib/ui/: Settings.svelte  Toolbar.svelte  XTerm.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/login/: +page.svelte
