[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.4.1"
license = "MIT"
description = "A secure web-based, collaborative terminal."
keywords = ["ssh", "share", "terminal", "collaborative"]

[workspace.dependencies]
anyhow = "1.0.62"
clap = { version = "4.5.17", features = ["derive", "env"] }
prost = "0.13.4"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive", "rc"] }
sshx-core = { version = "0.4.1", path = "crates/sshx-core" }
# Optimized for low-resource VPS - only essential features
tokio = { version = "1.40.0", features = ["rt-multi-thread", "net", "sync", "time", "macros", "signal", "io-util", "process", "fs"] }
tokio-stream = { version = "0.1.14", default-features = false, features = ["sync"] }
tonic = { version = "0.12.3", default-features = false, features = ["tls", "tls-webpki-roots", "transport", "codegen", "prost"] }
tonic-build = "0.12.3"
tonic-reflection = "0.12.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "fmt", "ansi"] }

[profile.release]
strip = true
lto = true           # Link-time optimization for smaller binary
codegen-units = 1    # Better optimization, slower compile
opt-level = "z"      # Optimize for size
panic = "abort"      # Smaller binary, no unwinding
